@@ -1467,12 +1467,11 @@ do_registers_info (int regnum, int fpregs)
 {
   register int i;
   int numregs = NUM_REGS + NUM_PSEUDO_REGS;
+  char *raw_buffer = (char*) alloca (MAX_REGISTER_RAW_SIZE);
+  char *virtual_buffer = (char*) alloca (MAX_REGISTER_VIRTUAL_SIZE);
 
   for (i = 0; i < numregs; i++)
     {
-      char *raw_buffer = (char*) alloca (MAX_REGISTER_RAW_SIZE);
-      char *virtual_buffer = (char*) alloca (MAX_REGISTER_VIRTUAL_SIZE);
-
       /* Decide between printing all regs, nonfloat regs, or specific reg.  */
       if (regnum == -1)
 	{
